# ros1_px4_mavros

./: .gitignore  README.md
Docker/: Dockerfile  exec.sh  init.sh  install.sh  my_entrypoint.sh  new_terminal.sh  run.sh  test_docker
my_mavros/: CMakeLists.txt  package.xml
my_mavros/include/: controller.h  dron.h
my_mavros/launch/: frames.launch  frames2.launch.py  main.launch  main.launch.py  rosbag.launch  rosbag2.py  rtab.launch  rtlablaunch.py  spawn_dron.launch  spawn_dronlaunch.py
my_mavros/models/drone_utn/: drone_utn (Batt 3kg).sdf  drone_utn (camara).sdf  drone_utn (kinect).sdf  drone_utn (tuneado).sdf  drone_utn.sdf  model.config
my_mavros/models/drone_utn/meshes/: base_link.mtl  base_link_despl.mtl  battery_link.mtl  cam_link.STL
my_mavros/models/wall_chicken/: model.config  model.sdf
my_mavros/models/wall_chicken/materials/scripts/: flower.material
my_mavros/models/wall_flower/: model.config  model.sdf
my_mavros/models/wall_flower/materials/scripts/: flower.material
my_mavros/models/wall_living/: model.config  model.sdf
my_mavros/models/wall_living/materials/scripts/: living.material
my_mavros/models/wall_town/: model.config  model.sdf
my_mavros/models/wall_town/materials/scripts/: town.material
my_mavros/outputs/: frames.gv
my_mavros/scripts/: exe.sh  launch_rviz.sh  mergedb.sh  play_recording.sh  print_frames.sh  record.sh  run_qgc.sh  test.sh  view_db.sh
my_mavros/scripts/config/: cylinder.rviz
my_mavros/src/: controller.cpp  dron.cpp  dron_main.cpp  manual_control.cpp  menu.cpp  publish_gp_origin.cpp
my_mavros/worlds/: cylinder.world  test.world
time_parser/: parser.py  time_ros1.txt  time_ros2.txt
